Refactoring: use toList for stream collection